fixed layout problems more or less

--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,8 @@ body {
 
 .titulum{
     position: absolute;
-    top: 50px;          /* vertical distance from top of page */
-    right: 100px;       /* distance from right side */
+    top: 5vh;          /* vertical distance from top of page */
+    right: 5vw;       /* distance from right side */
 }
 h1{
     text-align: center;
@@ -35,16 +35,15 @@ h1{
 
 .container {
     position: absolute;
-    top: 50%;
-    left: 50%;
+    inset: 0;           /* full viewport */
+    width: 100vw;
+    height: 100vh;
 
-    /* your “design canvas” size */
-    width: 1400px;   /* tweak if you want wider/narrower */
-    height: 800px;   /* tweak if you want taller/shorter */
-
-    transform-origin: center center;
-    transform: translate(-50%, -50%);
+    overflow: hidden;
+    padding: 10px
 }
+
+
 
 .pokertable,
 .pokertable-opp,
@@ -56,12 +55,10 @@ h1{
     position: absolute;
     top: 2vh;
     left: 2vw;
-    max-width: 1200px;
-    width: 75vw;          /* scales with viewport */
+    width: 70vw;
+    max-width: 1400px;
 }
-/* poker table image fills the .table box */
 .pokertable-opp {
-    display: block;
     width: 100%;
     height: auto;
 }
@@ -76,21 +73,20 @@ h1{
     flex-direction: row;          /* row of opponent cards */
     align-items: center;
     justify-content: center;
-    gap: 40px;                    /* distance between opponent cards */
-    transform: translate(-75px, -100px);   /* move left + higher, like .flexy */
+    gap: 3vw;                    /* distance between opponent cards */
+    transform: translate(-3vw, -12vh);   /* move left + higher, like .flexy */
 }
 
 
 /* GREEN */
 .table {
     position: absolute;
-    bottom: 2vh;
-    right: 2vw;
-    width: 75vw;
-    max-width: 1200px;
+    bottom: 10vh;
+    right: 5vw;
+    width: 70vw;
+    max-width: 1400px;
 }
 .pokertable {
-    display: block;
     width: 100%;
     height: auto;
 }
@@ -108,22 +104,21 @@ h1{
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 40px;                 /* distance between the 4 cards */
-    transform: translate(-40px, 0px);   /* move cards left */
+    gap: 3vw;                 /* distance between the 4 cards */
+    transform: translate(-3vw, -2vh);   /* move cards left */
 }
 
 
 /* BEIGE */
 .table-dealing {
     position: absolute;
-    left: -3vw;
-    bottom: 10vh;
+    left: 0vw;
+    bottom: 15vh;
     width: 40vw;
-    max-width: 600px;
+    max-width:50vw;
     transform: rotate(60deg);
 }
 .pokertable-dealing {
-    display: block;
     width: 100%;
     height: auto;
 }
@@ -139,21 +134,21 @@ h1{
     flex-direction: column;          /* two piles next to each other */
     align-items: center;
     justify-content: center;
-    gap: 80px;                    /* distance between two piles */
-    transform: translate(0px, 0px); /* move piles up a bit – tweak if needed */
+    gap: 10vh;                    /* distance between two piles */
+    transform: translate(0vw, 0vh); /* move piles up a bit – tweak if needed */
 }
 /* each pile (stack of 5 cards) */
 .card-pile-dealing-new {
     position: relative;
-    left: 0px;
-    top: 0px;
-    transform: translate(-250px, 0px) rotate(-60deg);
+    left: 0vw;
+    top: 0vh;
+    transform: translate(-16vw, 0vh) rotate(-60deg);
 }
 .card-pile-dealing-used {
     position: relative;
-    left: 0px;
-    top: 0px;
-    transform: translate(-30px, 20px) rotate(-60deg);
+    left: 0vw;
+    top: 0vh;
+    transform: translate(-2vw, 3vh) rotate(-60deg);
 }
 
 #cards5{
@@ -176,10 +171,15 @@ h1{
   transform: rotate(3deg);
 }
 
-
-@media (max-width: 1400px), (max-height: 800px) {
-    .container {
-        transform: translate(-50%, -50%)
-                   scale( min(100vw / 1400, 100vh / 800) );
-    }
+@media (max-width: 1300px) {
+    :root { --card-size: 100px; }
+}
+@media (max-width: 1100px) {
+    :root { --card-size: 90px; }
+}
+@media (max-width: 950px) {
+    :root { --card-size: 80px; }
+}
+@media (max-width: 800px) {
+    :root { --card-size: 70px; }
 }
